--- a/styles/globals.css
+++ b/styles/globals.css
@@ -5,9 +5,13 @@ body {
     font-family: -apple-system, BlinkMacSystemFont, Segoe UI, Roboto, Oxygen,
         Ubuntu, Cantarell, Fira Sans, Droid Sans, Helvetica Neue, sans-serif;
     background: black;
-    overflow: hidden;
-    width: 100vw;
-    height: 100vh;
+    overflow: hidden !important;
+    width: 100% !important;
+    height: 100% !important;
+    max-width: 100% !important;
+    max-height: 100% !important;
+    overflow-block: hidden;
+    overflow-inline: hidden;
 }
 
 a {
@@ -19,13 +23,10 @@ a {
     box-sizing: border-box;
 }
 
-@media (prefers-color-scheme: dark) {
-    html {
-        color-scheme: dark;
-    }
-
+@media all {
     body {
-        color: white;
-        background: black;
+        background: white;
+        overflow-block: hidden;
+        overflow-inline: hidden;
     }
 }
